# robotica_ws

./: README.md
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/esercizio2/: build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.023.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  (+7 more)
src/fanuc_movit_config/: .setup_assistant  CMakeLists.txt  checkresult.m  package.xml
src/fanuc_movit_config/Listener/: Listener.cpp
src/fanuc_movit_config/config/: fake_controllers.yaml  fanuc.srdf  joint_limits.yaml  ros_controllers.yaml
src/fanuc_movit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fanuc_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
(+63 files in other folders)
